--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,41 +1,26 @@
 ---
+import LandigHeader from "../components/LandigHeader.astro";
+import HeroSection from "../components/HeroSection.astro"
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
+import ChargeSection from "../components/ChargeSection.astro"
 ---
 
-<Layout title="Welcome to Astro.">
-  <main>
-    <header class="py-6 px-10 flex items-center fixed top-0 w-full justify-between">
-      <div class="flex flex-grow basis-0">
-        <svg
-          class="h-6 w-28"
-          viewBox="0 0 342 35"
-          xmlns="http://www.w3.org/2000/svg"
-          ><path
-            fill="currentColor"
-            d="M0 .1a9.7 9.7 0 0 0 7 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 0 0 7-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 0 0 6-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 0 0-8.7 7h39.9v-21h-31.2v-7zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7m0 13.8h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7m0 14.1h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7M308.5 7h26a9.6 9.6 0 0 0 7-7h-40a9.6 9.6 0 0 0 7 7"
-          ></path></svg
-        >
-      </div>
-      <nav>
-        <ul class="flex items-center text-sm [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2">
-          <li><a href="#">Model S</a></li>
-          <li><a href="#"></a>Model 3</li>
-          <li><a href="#"></a>Model X</li>
-          <li><a href="#"></a>Model Y</li>
-          <li><a href="#"></a>Powerwall</li>
-          <li><a href="#"></a>Carga</li>
-        </ul>
-      </nav>
-
-      <nav class="flex flex-grow justify-end basis-0">
-        <ul class="flex items-center text-sm [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2">
-          <li><a href="#">Soporte</a></li>
-          <li><a href="#"></a>Tienda</li>
-          <li><a href="#"></a>Cuenta</li>
-          <li><a href="#"></a>Menu</li>
-        </ul>
-      </nav>
-    </header>
+<Layout title="Tesla">
+  <LandigHeader/>
+  <main class="snap-y snap-mandatory relative w-full h-screen overflow-auto">
+    <div class="snap-center">
+      <HeroSection/>
+    </div>
+    <div class="snap-center">
+      <ChargeSection/>
+    </div>
+    <div class="snap-center">
+      <HeroSection/>
+    </div>
+    <div class="snap-center">
+      <ChargeSection/>
+    </div>
+    
+    
   </main>
 </Layout>
