creand componentes reutilizables

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,48 +1,37 @@
-<section
-      class="landing-section bg-black h-screen w-full text-center relative overflow-hidden"
-      data-header-color="white"
+---
+import Section from "./Section.astro";
+---
+
+<Section
+  title="Disfrute de Tesla"
+  subtitle="Programe una prueba de conduccion hoy mismo"
+  color="white"
+>
+  <div slot="footer">
+    <a
+      class="border-[3px]
+            text-sm
+            rounded
+            font-medium
+          text-white
+            px-12 py-2
+            inline-block
+          hover:bg-white
+          hover:text-black
+            transition-colors
+            border-white
+            bg-white/5
+            backdrop-blur-sm"
+      href="#"
     >
-      <div class="z-30 relative h-full flex flex-col">
-        <header>
-          <h2 class="text-white pt-40 text-[40px] font-medium">
-            Disfrute de Tesla
-          </h2>
-          <p class="text-white text-sm">
-            Programe una prueba de conduccion hoy mismo
-          </p>
-        </header>
-
-        <footer class="flex flex-col flex-grow flex-nowrap justify-end pb-20">
-          <div>
-            <a
-              class="border-[3px]
-              text-sm
-              rounded
-              font-medium
-            text-white
-              px-12 py-2
-              inline-block
-            hover:bg-white
-            hover:text-black 
-              transition-colors
-              border-white
-              bg-white/5
-              backdrop-blur-sm
-              "
-              href="#"
-            >
-              Prueba de conduccion
-            </a>
-          </div>
-        </footer>
-      </div>
-
-      <div class="absolute top-0 bottom-0 w-full h-full z-10">
-        <video
-          class="object-center object-cover w-full h-full"
-          autoplay
-          muted
-          loop
-          src="/public/video.webm"></video>
-      </div>
-    </section>
+      Prueba de conduccion
+    </a>
+  </div>
+  <video
+    slot="backgroud"
+    class="object-center object-cover w-full h-full"
+    autoplay
+    muted
+    loop
+    src="/public/video.webm"></video>
+</Section>
