--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,24 @@
 ---
 import LandigHeader from "../components/LandigHeader.astro";
-import HeroSection from "../components/HeroSection.astro"
+import HeroSection from "../components/HeroSection.astro";
 import Layout from "../layouts/Layout.astro";
-import ChargeSection from "../components/ChargeSection.astro"
+import ChargeSection from "../components/ChargeSection.astro";
 ---
 
 <Layout title="Tesla">
-  <LandigHeader/>
+  <LandigHeader />
   <main class="snap-y snap-mandatory relative w-full h-screen overflow-auto">
     <div class="snap-center">
-      <HeroSection/>
+      <HeroSection />
     </div>
     <div class="snap-center">
-      <ChargeSection/>
+      <ChargeSection />
     </div>
     <div class="snap-center">
-      <HeroSection/>
+      <HeroSection />
     </div>
     <div class="snap-center">
-      <ChargeSection/>
+      <ChargeSection />
     </div>
-    
-    
   </main>
 </Layout>
