--- a/src/components/ChargeSection.astro
+++ b/src/components/ChargeSection.astro
@@ -1,66 +1,50 @@
-<section
-      class=" landing-section bg-black h-screen w-full text-center relative overflow-hidden"
-      data-header-color="black"
+---
+import Section from "./Section.astro";
+---
+
+<Section
+  title="Model Y"
+  subtitle="Concertar una prueba de conduccion"
+  color="black"
+>
+  <div slot="footer" class="flex gap-x-4 mx-auto">
+    <a
+      class="bg-black
+          text-sm
+          rounded
+          font-medium
+        text-white
+          px-12 py-3
+          inline-block
+          transition-colors
+        hover:bg-gray-600
+        hover:text-white"
+      href="#"
     >
-      <div class="z-30 relative h-full flex flex-col">
-        <header>
-          <h2 class="text-black pt-40 text-[40px] font-medium">
-            Model Y
-          </h2>
-          <p class="text-black text-sm underline">
-            Concertar una prueba de conduccion
-          </p>
-        </header>
-
-        <footer class="flex flex-col flex-grow flex-nowrap justify-end pb-20">
-          <div class="flex gap-x-4 mx-auto">
-            <a
-              class="
-              bg-black
-              text-sm
-              rounded
-              font-medium
-            text-white
-              px-12 py-3
-              inline-block
-              transition-colors
-            hover:bg-gray-600
-            hover:text-white 
-
-              "
-              href="#"
-            >
-              Explorar inventario
-            </a>
-            <a
-              class="
-              bg-white
-              text-sm
-              rounded
-              font-medium
-            text-black
-              px-12 py-3
-            hover:bg-gray-900
-            hover:text-white
-            inline-flex
-            justify-center
-            items-center 
-              transition-colors
-              
-              "
-              href="#"
-            >
-              Pedido personalizado
-            </a>
-          </div>
-        </footer>
-      </div>
-
-      <div class="absolute top-0 bottom-0 w-full h-full z-10">
-        <img 
-        src="https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Model-Y-Desktop-Global.png" 
-        alt="Model Y"
-        class="h-full w-full object-cover object-center"
-        >
-      </div>
-    </section>
+      Explorar inventario
+    </a>
+    <a
+      class="bg-white
+          text-sm
+          rounded
+          font-medium
+        text-black
+          px-12 py-3
+        hover:bg-gray-900
+        hover:text-white
+        inline-flex
+        justify-center
+        items-center
+          transition-colors"
+      href="#"
+    >
+      Pedido personalizado
+    </a>
+  </div>
+  <img
+    slot="backgroud"
+    src="https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Model-Y-Desktop-Global.png"
+    alt="Model Y"
+    class="h-full w-full object-cover object-center"
+  />
+</Section>
