--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -33,5 +33,5 @@ import Section from "./Section.astro";
     autoplay
     muted
     loop
-    src="/public/video.webm"></video>
+    src="https://digitalassets.tesla.com/tesla-contents/video/upload/f_auto,q_auto:best/roadster-loop-imperial.mp4"></video>
 </Section>
